# FitNotes2Hevy

./: .gitignore  README.md  analytics.toml  app.py  config.py  create_default_mapping.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: lint.yml
.streamlit/: config.toml
data/exercises/: fitnotes_default.txt  fitnotes_extra.txt
data/mappings/: custom.json  default.json  extra.json
docs/: deployment.md  usage.md
files/: fitnotes_exercises.txt  hevy_exercises.txt  map_fitnotes2hevy_custom.json  map_fitnotes2hevy_default.json  map_fitnotes2hevy_extra.json
scripts/: convert.py  validate_mappings.py
src/fitnotes2hevy/: __init__.py  config.py  converter.py  mappings.py
