[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitnotes2hevy"
version = "1.0.0"
description = "Convert FitNotes workout exports to Hevy-compatible CSV format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Alan Jones", email = "alan@example.com"}
]
keywords = ["fitness", "workout", "fitnotes", "hevy", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.28.0"]

[project.urls]
Homepage = "https://github.com/alanjonesit/FitNotes2Hevy"
Repository = "https://github.com/alanjonesit/FitNotes2Hevy"
Issues = "https://github.com/alanjonesit/FitNotes2Hevy/issues"

[project.scripts]
fitnotes2hevy = "scripts.convert:app"

[tool.setuptools.packages.find]
where = ["src"]
