[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitnotes2hevy"
version = "1.0.0"
description = "Convert FitNotes workout exports to Hevy-compatible CSV format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Alan Jones", email = "alan@example.com"}
]
keywords = ["fitness", "workout", "fitnotes", "hevy", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.28.0", "streamlit-analytics2>=0.10.5"]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/alanjonesit/FitNotes2Hevy"
Repository = "https://github.com/alanjonesit/FitNotes2Hevy"
Issues = "https://github.com/alanjonesit/FitNotes2Hevy/issues"

[project.scripts]
fitnotes2hevy = "scripts.convert:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
